@@ -14,6 +14,7 @@ Maintenance and Enhancements
 * write a parallel event driven system for helper routines
 * handle distros in announces
 * check set/homenode et al input for proper callsigns
+* filter names and stuff so that it doesn't cause bad syntax in user_asc
 
 New Protocol Stuff
 ------------------
