@@ -1,3 +1,6 @@
+10Jan02=======================================================================
+1. set SO_LINGER = 0 to try to prevent the system sending data on a closing
+socket. This MAY help some of the hanging problems.
 08Jan02=======================================================================
 1. altered sh/qrz to point to the new server
 2. alter the character set handling a bit to make it better for spanish
